@@ -5,6 +5,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix support for storing arbitrary data in the DHT
 	* fixed bug in uTP packet circle buffer
 	* fix potential crash when using torrent_handle::add_piece
 	* added missing add_torrent_alert to python binding
